# gp-xml

./: .gitignore  BUILD_REFERENCE.md  README.md  WINDOWS_BUILD.md  build-dmg.sh  checkout-help-schema.json  index.html  package.json
.github/workflows/: release.yml  test.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
